# VulkanSC-Utility-Libraries

./: BUILD.md  CMakeLists.txt  CONTRIBUTING.md  README.md  REUSE.toml
.github/workflows/: ci.yml  ci_sc.yml  format.yml
include/vulkan/: vk_enum_string_helper.h
include/vulkan/utility/: vk_dispatch_table.h  vk_safe_struct.hpp  vk_struct_helper.hpp
include/vulkansc/: vk_enum_string_helper.h
include/vulkansc/utility/: vk_dispatch_table.h  vk_struct_helper.hpp
scripts/: generate_source.py  known_good.json  update_deps.py
scripts/generators/: base_generator.py  safe_struct_generator.py
src/vulkan/: CMakeLists.txt  vk_safe_struct_core.cpp  vk_safe_struct_ext.cpp  vk_safe_struct_khr.cpp  vk_safe_struct_utils.cpp  vk_safe_struct_vendor.cpp
